# ratfist-web

./: .gitignore  Cargo.toml  README.md
node_stub/: Cargo.toml
node_stub/src/: dispatcher.rs  main.rs  meteo.rs
server/: .env  Cargo.toml  create_sensors.sql  dotenv.sample  ratfist.db
server/migrations/2018-04-06-005552_initial_meteo/: down.sql  up.sql
server/migrations/2018-09-03-190051_sensor_nodes/: down.sql  up.sql
server/migrations/2018-09-05-214353_node_comm_routing/: down.sql  up.sql
server/migrations/2019-05-29-212351_light_level_sensor_rename/: down.sql  up.sql
server/migrations/2019-08-15-210555_remove_sensor_type_table/: down.sql  up.sql
server/migrations/2020-09-27-123103_remove_default_serial_node/: down.sql  up.sql
server/src/: comm.rs  db.rs  lib.rs  main.rs  meteo.rs  schema.rs  utils.rs
server/src/comm/: i2c.rs  mod.rs  serial.rs
server/src/db/: mod.rs  models.rs  schema.rs
server/src/meteo/: fetcher.rs  immediate.rs  messages.rs  mod.rs  models.rs  schema.rs  stored.rs
server/src/meteo/node/: mod.rs  serial_node.rs
server/src/meteo/node/enviro_phat/: bmp280.rs  mod.rs  tcs3472.rs
server/src/spinner/: mod.rs
src/: comm.rs  main.rs  meteo.rs  spinner.rs  utils.rs
utils/: start_testing_setup.sh
