[package]
name = "ratfist_server"
version = "0.5.0"
authors = ["Ondrej Palenicek <ondrej.palenicek@gmail.com>"]
edition = "2018"

[[bin]]
name = "ratfist_server"

[[bin]]
name = "meteo_cli"
required-features = ["meteo"]

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
serial = "0.4"
regex = "1"
dotenv = "0.14"
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
scheduled-executor = "0.4"
prettytable-rs = { version = "^0.8", optional = true }
clap = { version = "2", optional = true }
lazy_static = "1"

[features]
spinner = []
meteo = ["prettytable-rs", "clap"]
