[package]
name = "ratfist-server"
description = "HTTP server providing a REST API to various sensors connected by UART or I2C"
homepage = "https://github.com/opaleni/ratfist-server.git"
license = "MIT"
version = "0.5.0"
authors = ["Ondrej Palenicek <ondrej.palenicek@gmail.com>"]
edition = "2018"

[[bin]]
name = "ratfist-server"

[[bin]]
name = "meteo-cli"
required-features = ["meteo"]

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
serial = "0.4"
regex = "1"
dotenv = "0.14"
diesel = { version = "1", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1"
chrono = { version = "0.4", features = ["serde"] }
scheduled-executor = "0.4"
prettytable-rs = { version = "^0.8", optional = true }
clap = { version = "2", optional = true }
lazy_static = "1"
i2cdev = "0.4"
anyhow = "1"

[features]
meteo = ["prettytable-rs", "clap"]
